# rising-sun

./: .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config.toml
.github/workflows/: build.yml
analysis/: 01-virtual-disk-format.md  01a-emdisk.md  01b-sundisk-pdr.md  02-bios-interface.md  03-display-emulation.md  03a-pixel-transfer-deep-dive.md  03a-pixel-transfer.md  04-keyboard-mouse.md  05-filesystem-redirection.md  06-clipboard.md  07-network.md  09-cdrom.md  10-floppy.md  analysis.md
common/: Cargo.toml
common/src/: config.rs  config_storage.rs  driver.rs  ioctl.rs  lib.rs  scsi.rs  types.rs
driver/: 99-sunpci.rules  Kbuild  Makefile  dkms.conf
driver/include/uapi/: sunpci_ioctl.h
driver/src/: .audio.o.cmd  .channel.o.cmd  .clipboard.o.cmd  .fsd.o.cmd  .input.o.cmd  .ioctl.o.cmd  .ipc.o.cmd  .main.o.cmd  .mmap.o.cmd  .network.o.cmd  .pci.o.cmd  .ring.o.cmd  .storage.o.cmd  .vga.o.cmd  .video.o.cmd  audio.c  channel.c  clipboard.c  fsd.c  input.c  ioctl.c  ipc.c  ipc.h  main.c  mmap.c  network.c  pci.c  regs.h  ring.c  ring.h  storage.c  sunpci.h  vga.c  video.c
frontend/: Cargo.toml  build.rs
frontend/qml/: main.qml
frontend/qml/dialogs/: ClipboardSettingsDialog.qml  CreateDiskDialog.qml  DiskPropertiesDialog.qml  DisplaySettingsDialog.qml  DriveMappingDialog.qml  KeyboardSettingsDialog.qml  MountFloppyDialog.qml  MountIsoDialog.qml  MouseSettingsDialog.qml  NetworkSettingsDialog.qml  qmldir
frontend/src/: lib.rs  main.rs
frontend/src/bridge/: mod.rs
frontend/src/ui/: audio_controller.rs  clipboard_controller.rs  config_manager.rs  disk_manager.rs  display_view.rs  drive_mapping_controller.rs  framebuffer_provider.rs  input_controller.rs  main_window.rs  mod.rs  network_controller.rs  session_controller.rs  settings_controller.rs
