[workspace]
members = [
    "frontend",
    "common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "SunPCi software for mere mortals"
repository = "https://github.com/yourusername/rising-sun"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["ioctl"] }
