[package]
name = "rising-sun-common"
version.workspace = true
edition.workspace = true
description = "Shared types and ioctl definitions for rising-sun"
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
nix.workspace = true
toml = "0.8"

[dev-dependencies]
tempfile = "3"
