[package]
name = "rising-sun-frontend"
version.workspace = true
edition.workspace = true
description = "Qt-based GUI for rising-sun"
license.workspace = true

[[bin]]
name = "rising-sun"
path = "src/main.rs"

[dependencies]
rising-sun-common = { path = "../common" }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true

serde_json = "1"
libc = "0.2"

# Audio output - cross-platform audio via ALSA/PipeWire/PulseAudio
cpal = "0.15"

# Qt bindings - using cxx-qt
cxx = "1"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_gui", "qt_qml"] }

[build-dependencies]
cxx-qt-build = "0.7"
